--- a/Koha/Plugin/Com/ByWaterSolutions/EBookDeleter/tool-step1.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EBookDeleter/tool-step1.tt
@@ -9,12 +9,11 @@
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/plugins/plugins-home.pl">Plugins</a> &rsaquo; Record merger &rsaquo; Upload file</div>
 
 <div id="doc3">
-    <p>Please upload your CSV File</p>
-
     <form method="post" enctype="multipart/form-data">
+        <p>Vendor name: <input type="text" name="vendor" /></p>
         <input type="hidden" name="class" value="[% CLASS %]"/>
         <input type="hidden" name="method" value="[% METHOD %]"/>
-        <p>File to upload: <input type="file" name="uploaded_file" /></p>
+        <p>File of biblionumbers to upload: <input type="file" name="uploaded_file" /></p>
         <input name="submitted" type="submit" value="Upload" />
     </form>
 
