Bug 5 - Field Checking first 856u entry box

--- a/Koha/Plugin/Com/ByWaterSolutions/EBookDeleter/tool-step1.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EBookDeleter/tool-step1.tt
@@ -9,14 +9,14 @@
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/plugins/plugins-home.pl">Plugins</a> &rsaquo; Ebook Deleter &rsaquo; Search</div>
 
 <div id="doc3">
-    <form class="form-horizontal">
+    <form class="form-horizontal" id="search-form">
       <input type="hidden" name="class" value="[% CLASS %]"/>
       <input type="hidden" name="method" value="[% METHOD %]"/>
 
       <div class="form-group">
           <label for="url_contains" class="col-sm-2 control-label">Vendor name in 856$u:</label>
           <div class="col-sm-5">
-              <input class="form-control" type="text" name="url_contains" />
+              <input class="form-control" type="text" name="url_contains" id="url_contains" required minlength="6" />
           </div>
           <p class="help-block">All records containing this vendor name in an 856$u will be selected.</p>
       </div>
@@ -24,7 +24,7 @@
       <div class="form-group">
           <label for="url_ends_with" class="col-sm-2 control-label">Ebook IDs:</label>
           <div class="col-sm-5">
-              <textarea class="form-control" name="url_ends_with" rows="20" cols="50"></textarea>
+              <textarea class="form-control" name="url_ends_with" id="url_ends_with" rows="20" cols="50" required></textarea>
           </div>
           <p class="help-block">Found at the end of the 856$u.</p>
       </div>
@@ -34,7 +34,9 @@
               <button type="submit" class="btn btn-default">Search</button>
           </div>
       </div>
-
     </form>
+    <script>
+        $("#search-form").validate();
+    </script>
 
 [% INCLUDE 'intranet-bottom.inc' %]
